# my_calculator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  devenv.bash  docker-compose.yml
.devcontainer/: devcontainer.json
apps/: CMakeLists.txt
apps/calc/: CMakeLists.txt
apps/calc/src/: main.cpp
cmake/: compiler.cmake  compiler_opts.cmake  mytarget.cmake  packaging.cmake  packaging_tests.cmake  static_code_analysis.cmake
components/: CMakeLists.txt
components/parsing/: CMakeLists.txt  parsing.cppm
components/parsing/include/parsing/: parsing.h
components/parsing/src/: parsing.cpp  parsing.cppm
components/parsing/test/: CMakeLists.txt  baseline.json  benchmarks.cpp  my_first_fixture.cpp
components/view/: CMakeLists.txt  view.cppm
components/view/include/view/: view.h
components/view/src/: view.cpp
components/view/test/: CMakeLists.txt  my_first_fixture.cpp
docker/: Dockerfile
scripts/: benchmark_backstop.bash  package_contents.bash
